# python-rust-example

./: Cargo.toml  LICENSE  README.md  build.rs  test_api.py
include/: api.h  errors.h
src/: bindings.rs  lib.rs  logic.rs
